使用ItemControl绑定数据集合。

--- a/WpfAppFramework/MainWindow.xaml
+++ b/WpfAppFramework/MainWindow.xaml
@@ -8,20 +8,24 @@
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Border>
         <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <TextBox Grid.Row="0" Width="150px" FontSize="16px" 
-                     Foreground="{Binding ValueColor}" 
-                     BorderThickness="1" BorderBrush="#000"
-                     VerticalAlignment="Center"
-                     HorizontalAlignment="Center"
-                     Height="50px"
-                     Text="{Binding Value,UpdateSourceTrigger=PropertyChanged}"></TextBox>
-            <Button Grid.Row="1" Name="button" Width="100px" Height="50px" Content="设置" 
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StackPanel>
+                <Button Name="button" Content="设置" 
                     Command="{Binding ValueCommand}"
                     CommandParameter="123" ></Button>
+                <TextBox
+                     Foreground="{Binding ValueColor}" 
+                     BorderThickness="1" BorderBrush="#000"
+                     Text="{Binding Value,UpdateSourceTrigger=PropertyChanged}">
+                </TextBox>
+                <TextBlock Text="用户名"></TextBlock>
+            </StackPanel>
+            <ItemsControl Grid.Column="1" ItemsSource="{Binding valueList}">
+                
+            </ItemsControl>
         </Grid>
     </Border>
 </Window>
